2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/makeversion.rb: Removed. Use make_version_header() of 
	Ruby/GLib.
	* extconf.rb: Follow above change.

2005-10-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-util.c: Added Gnome::CanvasBuf#render_svp,
	#ensure_buf, Gnome::CanvasItem#update_svp, #request_redraw_svp.
	* src/rbgnome-canvas-path-def.c: Added Gnome::CanvasPathDef#finish,
	#ensure_space.
	* src/rbgnome-canvas.c: Handling "render-background" signal correctly
	(Returns Gnome::CanvasBuf).
	Gnome::Canvas#request_redraw accepts Art::Uta.
	* src/rbgnome-canvas-item.c, rbgnome-canvas-path-def.c, rbgnomecanvas.h: 
	Fix a segfault using Gnome::CanvasPathDef.

2005-09-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-buf.c: Added Gnome::CanvasBuf.
	* src/rbgnomecanvas.[ch]: ditto.
	* src/makeversion.rb: Added.
	* src/rbgnome-canvas.c: Added Gnome::BUILD_VERSION.
	* src/rbgnome.h, extconf.rb: ditto.	

2005-09-11  Pascal Terjan  <pterjan@linuxfr.org>

	* src/rbgnome-canvas-path-def.c : Fix for GnomeCanvas 2.12
	Patch from herzi in ticket #1287758.

2005-08-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-item.c (citem_intialize): Check first parameter. 

2005-08-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgnome-canvas-path-def.c (cpathdef_initialize):
	Remove garbage.

2005-07-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgnome-canvas-path-def.c (rbgno_canvas_path_def_get_type):
	Use rbgno_canvas_path_def_copy() instead of
	gnome_canvas_path_def_ref(). Because gnome_canvas_path_def_ref()
	doesn't return gpointer.
	
	* src/rbgnome-canvas-path-def.c (cpathdef_initialize):
	Improve argument check.

2005-02-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, COPYING.LIB src/*.c: 
	Replace "GNU LIBRARY GENERAL PUBLIC LICENSE" to 
	"GNU LESSER GENERAL PUBLIC LICENSE".

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>
