@@ -1,3 +1,8 @@
+2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgnome-canvas-path-def.c: Fixed compiling error on
+	libgnomecanvas-2.10.
+
 2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/makeversion.rb: Removed. Use make_version_header() of 
